--- a/_client/src/style/rangeSlider.css
+++ b/_client/src/style/rangeSlider.css
@@ -85,6 +85,8 @@
     border: 0 none;
     -webkit-appearance: none;
     background-color: red;
+
+    cursor: pointer;
 }
 
 .input-range__box-ranger {
