--- a/_client/src/style/buttons.css
+++ b/_client/src/style/buttons.css
@@ -7,7 +7,7 @@
     font-size: 20px;
     line-height: 27px;
     text-align: center;
-    background: #C4C4C4;
+    background: #adb5bd;
     border: none;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
