--- a/_client/src/style/checkbox.css
+++ b/_client/src/style/checkbox.css
@@ -13,6 +13,7 @@
     font-weight: 400;
     line-height: 24px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .widget--checkbox-real + .widget--checkbox-fake::before {
