--- a/_client/src/style/header.css
+++ b/_client/src/style/header.css
@@ -77,8 +77,10 @@
     display: flex;
     height: 100%;
     align-items: center;
+    justify-content: center;
     color: black;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .header:hover .navigation__link  {
@@ -90,7 +92,7 @@
 }
 
 .navigation__link--active {
-    color: #ff8a8a;
+    color: #d71111;
     transition: all 0.3s ease-in-out;
 }
 
