--- a/_client/src/style/widget.css
+++ b/_client/src/style/widget.css
@@ -23,17 +23,16 @@
     justify-content: space-between;
 }
 
-.widget--tilda {
-    display: block;
-    font-size: 40px;
-    color: white;
-    font-weight: bold;
-    margin: 0;
-    line-height: 40px;
+.widget--input--dark {
+    background: #adb5bd;
+    transition: 0.3s;
+}
+
+.widget--input--dark:hover {
+    background: #FF7C7C;
 }
 
 .widget--input {
-    max-width: 110px;
     height: 45px;
     text-align: center;
     padding: 0;
@@ -42,3 +41,57 @@
     font-size: 1.3rem;
 }
 
+.widget--upload {
+    font-family: "Roboto", sans-serif;
+    border: 0 none;
+    text-decoration: none;
+    background: white;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+
+.widget--upload::-webkit-file-upload-button {
+    visibility: hidden;
+}
+
+.widget--upload::before {
+    content: 'Выберете файл';
+    display: inline-block;
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
+}
+
+.widget--upload:hover::before {
+    border-color: black;
+}
+
+.widget--upload:active::before {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
+
+
+.img-preview {
+    cursor: pointer;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background: #C4C4C4;
+    object-fit: cover;
+    filter: grayscale(100%);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s ease-in-out;
+}
+
+.img-preview:hover {
+    filter: grayscale(0%);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
