--- a/_client/src/style/carCard.css
+++ b/_client/src/style/carCard.css
@@ -29,6 +29,7 @@
     position: relative;
 }
 
+
 .car__favorite:before {
     content: "";
     background-image: url("../images/favorite_disabled.svg");
@@ -38,6 +39,13 @@
     position: absolute;
     top: 5px;
     left: -30px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.car__favorite:hover:before {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .car__favorite--is-favorite::before {
