доделана пользовательская часть
доделаны заказы тестдрайвов
избранное
написание и отображение комментариев

--- a/_client/src/index.css
+++ b/_client/src/index.css
@@ -18,6 +18,8 @@
 @import "style/profile.css";
 @import "style/auth.css";
 @import "style/modal.css";
+@import "style/testDrive.css";
+
 
 body {
     padding: 0;
