Добавлены в админку система отображения машин

--- a/_client/src/index.css
+++ b/_client/src/index.css
@@ -20,6 +20,7 @@
 @import "style/modal.css";
 @import "style/testDrive.css";
 @import "style/userItem.css";
+@import "style/carItem.css";
 
 
 body {
