доделана черновая версия

--- a/_client/src/index.css
+++ b/_client/src/index.css
@@ -21,6 +21,7 @@
 @import "style/testDrive.css";
 @import "style/userItem.css";
 @import "style/carItem.css";
+@import "style/carEdit.css";
 
 
 body {
