Убрано дерганье страницы при добавлении скролера
Убрано дерганье страницы при добавлении скролера

--- a/_client/src/index.css
+++ b/_client/src/index.css
@@ -24,6 +24,11 @@
 @import "style/carEdit.css";
 
 
+html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
     padding: 0;
     margin: 0;
