--- a/_client/src/style/carCard.css
+++ b/_client/src/style/carCard.css
@@ -4,6 +4,8 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     max-height: 256px;
     max-width: 250px;
+    min-height: 256px;
+    min-width: 250px;
 }
 
 .car:hover {
@@ -23,6 +25,7 @@
     overflow: hidden;
     filter: grayscale(100%);
     transition: all 0.3s ease-in-out;
+    background-color: #adb5bd;
 }
 
 .car__favorite {
