--- a/_client/src/index.css
+++ b/_client/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-@import "style/header.css";
+@import "components/header/header.css";
 @import "style/footer.css";
 @import "style/global.css";
 @import "style/column.css";
@@ -25,7 +25,7 @@
 
 
 html {
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     margin-right: calc(-1 * (100vw - 100%));
 }
 
@@ -105,7 +105,13 @@ input::-webkit-inner-spin-button {
     padding: 0;
 }
 
-.invisibleLink{
+.invisibleLink {
     text-decoration: none;
     color: inherit;
+}
+
+@media screen and (max-width: 768px) {
+    html {
+        margin-right: 0;
+    }
 }
